// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: basic 1`] = `
<HelpTooltip
  overlay={
    <div
      className="big-padded-top big-padded-bottom"
    >
      <div
        className="spacer-bottom"
      >
        <strong>
          title
        </strong>
      </div>
      <p>
        content
      </p>
    </div>
  }
/>
`;

exports[`renders correctly: no content 1`] = `
<HelpTooltip
  overlay={
    <div
      className="big-padded-top big-padded-bottom"
    >
      <div
        className="spacer-bottom"
      >
        <strong>
          title
        </strong>
      </div>
    </div>
  }
/>
`;

exports[`renders correctly: no title 1`] = `
<HelpTooltip
  overlay={
    <div
      className="big-padded-top big-padded-bottom"
    >
      <p>
        content
      </p>
    </div>
  }
/>
`;

exports[`renders correctly: with links 1`] = `
<HelpTooltip
  overlay={
    <div
      className="big-padded-top big-padded-bottom"
    >
      <div
        className="spacer-bottom"
      >
        <strong>
          title
        </strong>
      </div>
      <p>
        content
      </p>
      <React.Fragment>
        <hr
          className="big-spacer-top big-spacer-bottom"
        />
        <div
          aria-hidden={true}
          className="little-spacer-bottom"
        >
          <withAppStateContext(DocLink)
            to="http://link.tosome.place"
          >
            external link
          </withAppStateContext(DocLink)>
        </div>
        <div
          aria-hidden={true}
          className="little-spacer-bottom"
        >
          <withAppStateContext(DocLink)
            to="/guide"
          >
            internal link
          </withAppStateContext(DocLink)>
        </div>
        <div
          aria-hidden={true}
          className="little-spacer-bottom"
        >
          <ForwardRef(Link)
            to="/projects"
          >
            in place
          </ForwardRef(Link)>
        </div>
      </React.Fragment>
    </div>
  }
/>
`;
